[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
actix-rt = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.0"
mysql = "20.1.0"